Switching between MSVC and MinGW toolchains causes registry to have most plugins missing, and some plugins with no features in it
Working on a reproducer for this. Current workaround is to delete the registry cache folder
$HOME\AppData\Local\Microsoft\Windows\INetCache\gstreamer-1.0
but it is rather annoying to have plugins suddenly disappear :)